Wed Feb 11 10:09:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3565_Regression/run_test.pl:
        * tests/Bug_3566_Regression/run_test.pl:
          Improved these scripts

Wed Feb 11 08:50:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/InterfaceRepo/Application_Test/ifr_dii_client.cpp:
          Removed a second old msc ver check

Wed Feb 11 07:03:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/InterfaceRepo/Application_Test/ifr_dii_client.cpp:
          Removed old msc ver check

Tue Feb 10 20:13:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OctetSeq/run_test.pl:
          Fixed fuzz errors

Tue Feb 10 18:37:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added 3565/3566 and enabled some tests for fuzz/wince

Tue Feb 10 18:36:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OctetSeq/run_test.pl:
        * tests/AMH_Oneway/run_test.pl:
        * tests/AMI/run_test.pl:
        * tests/AMI_Timeouts/run_test.pl:
          Converted to the new test framework

        * tests/Bug_3559_Regression/Bug_3559_Regression_Test.cpp:
          Zap empty spaces

Tue Feb 10 18:33:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3565_Regression/*
          New test for bugzilla 3565

        * tests/Bug_3566_Regression/*
          New test for bugzilla 3566

Tue Feb 10 18:32:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Naming/Naming_Loader.cpp:
          No need for intermediate variable

Tue Feb 10 18:31:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/catior/test.bat:
          Updated for catior rename

Tue Feb 10 18:29:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/RTCORBA/RT_Mutex.h:
          Made destructor public to fix GCC 4.4 compile errors
