@@ -1,3 +1,8 @@
+Wed Feb 11 10:32:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * orbsvcs/tests/InterfaceRepo/Application_Test/ifr_dii_client.cpp:
+          And now the last msc ver check
+
 Wed Feb 11 10:09:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Bug_3565_Regression/run_test.pl:
